Finish building the website

--- a/website.html
+++ b/website.html
@@ -42,13 +42,280 @@
                     <span style="font-size: 16px;">
                         Generate and store your own power. Start saving today <br>
                      using clean, eco-friendly energy.
-                    </span>
-                    
+                    </span> 
+                </p>
+               <p>
+                <button style="width:160px; height:42px; border-radius:10px;">
+                    <a style="color:brown ; text-decoration:none; margin-top:20px" id="link" href="learnhow.html">
+                        Learn How
+                    </a>
+               </p>
+
+            </section>
+            <section style="background-color:rgba(18, 34, 46, 1); Width:1223.33px; height:379px; ">
+                <p style="color:white; font-size: 24px;">
+                    Get a No-Obligation Quote Today!
+                </p>
+                <form action="https://hhtpbin.org/post">
+                    <p style="color:white ; margin-left: 10px;">
+                        <label for="Fname">
+                            First Name *
+                        </label>
+                        <label style="margin-left:113px ;" for="Lname">
+                            Last Name *
+                        </label>
+                        <label style="margin-left:115px ;" for="email">
+                            Email *
+                        </label>
+                        <label style="margin-left: 139px;" for="phone">
+                            Phone *
+                        </label>
+                        <label style="margin-left:143px;" for="address">
+                            Address *
+                        </label>
+                    </p>
+                    <p style="margin-left: 10px;">
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="Fname" id="Fname" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="Lname" id="Lname" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white"  type="email" name="email" id="email" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="tel" name="phone" id="phone" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="address" id="address" required>
+                    </p>
+                    <div style="display:flex; flex-direction:row">
+                        <p style="color:white ;">
+                            <input type="checkbox" name="home" id="home">
+                            <label for="home">
+                                HomeOwner
+                            </label>
+                            <input type="checkbox" name="bus" id="bus">
+                            <label for="bus">
+                                Business Owner
+                            </label>
+                        </p>
+                        <p>
+                             <button style="color: white; background-color:rgba(165, 42, 42, 0.479); width:160px; height:42px; border-radius:10px;  margin-left:600px;" type="submit">
+                                Submit
+                             </button>
+                        </p>
+                    </div>
+                </form>
+            </section>
+            <section style="width:1233.33px; height:224.32px; background:#F2F2F2; margin-bottom:20px; margin-right: 20px ;">
+                <p style="font-size: 48px;">
+                    Why Should You Switch?
+                </p>
+                <p>
+                    <button style="width:160px; height:42px; border-radius:10px;">
+                        <a style="color:brown ; text-decoration:none; margin-top:20px" id="link" href="learnmore.html">
+                            Learn More
+                        </a>  
+                </p>
+            </section>
+            <section style="display: flex; flex-direction:row;">
+                <div style="width:400px; height:650px; background-image: url(sky.jpg); background-size: cover; background-attachment: fixed; margin-left: 20px;">
+                    <p >
+                        <h2 style="font-size: 24px; margin-left: 50px; ">
+                            Sustainable & <br>
+                            Renewable Energy
+                        </h2>
+                        <p style="margin-left: 50px ;">
+                            I'm a paragraph. Click here to add <br>
+                            your own text and edit me. It’s easy. <br>
+                            Just click “Edit Text” or double click <br>
+                            me to add your own content and <br>
+                            make changes to the font.
+                        </p> 
+                    </p>
+                </div>
+                <div style="width:400px; height:650px; background-color: rgba(180, 92, 61, 1); color: white; margin-left: 20px">
+                    <p>
+                        <h2 style="font-size: 24px; margin-left: 50px; margin-top: 250px;">
+                            Safe & Reliable. <br>
+                            Take Control of Your <br>
+                            Power Production
+                        </h2>
+                        <p style="margin-left: 50px;">
+                            I'm a paragraph. Click here to add <br>
+                            your own text and edit me. It’s easy. <br>
+                            Just click “Edit Text” or double click <br>
+                            me to add your own content and <br>
+                            make changes to the font.
+                        </p>
+                    </p>
+                </div>
+                <div style="width:400px; height:650px; background-image: url(website.jpg); background-size: cover; margin-left: 20px">
+                    <p>
+                        <h2 style="font-size: 24px;margin-left: 50px;">
+                            Great Savings & <br>
+                             Return on Investment
+                        </h2>
+                        <p style="margin-left: 50px;">
+                            I'm a paragraph. Click here to add <br>
+                            your own text and edit me. It’s easy. <br>
+                            Just click “Edit Text” or double click <br>
+                            me to add your own content and <br>
+                            make changes to the font. 
+                        </p>
+                    </p>
+                </div>
+            </section>
+            <section style="width:1233.33px; height:170.2px; background-color:#F2F2F2; margin-top: 20px; margin-bottom: 20px;">
+                <p style="font-size:48px; margin-left: 30px;">
+                    How Solar Energy Works
                 </p>
 
             </section>
-            <section>
-                
+            <section style="display:flex; flex-direction:row; margin-bottom: 20px;">
+                <div style="width:400px; height:303px; background-color: rgba(207, 221, 233, 1); text-align: center;">
+                    <p>
+                        <h2 style="font-size: 72px;">
+                            200K
+                        </h2>
+                        Happy Customers
+                    </p>
+                </div>
+                <div style="width:400px; height:303px; background-color: rgba(207, 221, 233, 1); text-align: center; margin-left: 20px; margin-right: 20px;">
+                    <p>
+                        <h2 style="font-size: 72px;">
+                            3.1 <br>
+                            Billion
+                        </h2>
+                        KwH of Clean Energy
+                    </p>
+                </div>
+                <div style="width:400px; height:303px; background-color: rgba(207, 221, 233, 1); text-align: center;">
+                    <p>
+                        <h2 style="font-size: 72px;">
+                            2.4 <br>
+                            Million
+                        </h2>
+                        Metric Tons of Carbon Emissions Avoided
+                    </p>
+                </div>
+            </section>
+            <section style="width:1233.33px; height:414px; background-image: url(web.jpg); background-size: cover; margin-top: 20px;">
+                <p style="font-size: 16px; margin-left: 50px;">
+                    I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit <br> Text” or double click me to add your own content and make changes to the font. Feel <br>
+                    free to drag and drop me anywhere you like on your page. I’m a great place for you to <br>
+                    tell a story and let your users know a little more about you.
+                </p>
+                <p style="font-size: 16px; margin-left: 50px;">
+                    This is a great space to write a long text about your company and your services. You <br>
+                    can use this space to go into a little more detail about your company. Talk about your <br>
+                    team and what services you provide. Tell your visitors the story of how you came up <br>
+                    with the idea for your business and what makes you different from your competitors. <br>
+                    Make your company stand out and show your visitors who you are.
+                </p>
+            </section>
+            <section style="width:1233.3px ;height:219.79px; background-color: rgba(242, 242, 242, 1);margin-bottom:20px">
+                <p>
+                    <h2 style="font-size:48px; margin-left: 30px;">
+                        Our Services
+                    </h2>
+                </p>
+                <p style="margin-left: 30px;">
+                    We make going solar easy, so you’ll get a better energy service at a better price.
+                </p>
+            </section>
+            <section style="display: flex; margin-bottom: 20px;">
+                <div style="width:400px; height:575.6px; color: white; background-color: rgba(180, 92, 61, 1);">
+                    <p style="font-size: 24px; margin-top: 350px; margin-left:50px;">
+                        Residential
+                    </p>
+                    <p style=margin-left:50px;>
+                        I'm a paragraph. Click here to <br>
+                        add your own text and edit me. <br>
+                        It’s easy. Just click “Edit Text” or <br>
+                        double click me to add your <br>
+                        own content and make changes <br>
+                        to the font. 
+                    </p>
+                </div>
+                <div style="width:400px; height:575.6px; color: white; background-color: rgba(18, 34, 46, 1); margin-left: 20px; margin-right:20px ;">
+                    <p style="font-size: 24px; margin-top: 350px; margin-left:50px;">
+                        Commercial
+                    </p>
+                    <p style="margin-left:50px;">
+                        I'm a paragraph. Click here to <br>
+                        add your own text and edit me. <br>
+                        It’s easy. Just click “Edit Text” or <br>
+                        double click me to add your <br>
+                        own content and make changes <br>
+                        to the font. 
+                    </p>
+                </div>
+                <div style="width:400px; height:575.6px; background-color: rgba(207, 221, 233, 1);">
+                    <p style="font-size: 24px;  margin-top: 350px; margin-left:50px;">
+                        Maintenance & Support
+                    </p>
+                    <p style="margin-left:50px;">
+                        I'm a paragraph. Click here to <br>
+                        add your own text and edit me. <br>
+                        It’s easy. Just click “Edit Text” or <br>
+                        double click me to add your <br>
+                        own content and make changes <br>
+                        to the font. 
+                    </p>
+                </div>
+            </section>
+            <section style="width: 1233.33px;height:170.2px; background-color:#F2F2F2; margin-bottom: 20px;">
+                <p>
+                    <h2 style="font-size: 48px; margin-left: 50px;">
+                        See Our Work
+                    </h2>
+                </p>
+            </section>
+            <section style="display:flex; margin-bottom: 20px;">
+                <div style="width:398px; height:517.84px; background-image: url(Add.jpg); background-size: cover;  margin-right: 20px;">
+
+                </div>
+                <div style="width:829px; height:517.84px;  background-image: url(Geo.jpg); background-size: cover; background-position: 50%;">
+
+                </div>
+
+            </section>
+            <section style="width:1233.33px; height:200.2px; background-color: #F2F2F2; margin-bottom: 20px;">
+                <p style="font-size:48px; margin-left: 20px;">
+                    What Our Happy Clients Say?
+                </p>
+            </section>
+            <section style="display:flex; margin-bottom: 20px;">
+                <div  style="width:400px; height:650px; background-image: url(blue.jpg); background-size: cover; background-attachment: fixed;">
+                    <p style="color:white; font-size: 24px; margin-top: 350px; margin-left: 50px;">
+                        “I'm a testimonial. Click <br>
+                        to edit me and add text <br>
+                        that says something <br>
+                        nice about you and <br>
+                        your services.”
+                    </p>
+                    <p style="color:white; margin-left: 50px;">
+                        Sandy Williams, Homeowner
+                    </p>
+                </div>
+                <div  style="width:400px; height:650px; background-color: rgba(207, 221, 233, 1); margin-left: 20px; margin-right: 20px;">
+                    <p style="font-size: 24px; margin-left: 50px;">
+                        “I'm a testimonial. Click <br>
+                        to edit me and add text <br>
+                        that says something <br>
+                        nice about you and <br>
+                        your services.”
+                    </p>
+                    <p style="margin-left: 50px;">
+                        Quinn Davis, CEO Quinn’s Inc.
+                    </p>
+                </div>
+                <div  style="width:400px; height:650px; background-image: url(sunset.jpg); background-size: cover; background-attachment: fixed;">
+                    <p style="color:white; font-size: 24px; margin-top: 350px; margin-left: 50px;">
+                        “I'm a testimonial. Click <br>
+                        to edit me and add text <br>
+                        that says something <br>
+                        nice about you and <br>
+                        your services.”
+                    </p>
+                    <p style="color:white; margin-left: 50px;">
+                        Casey John, Ops Manager GAL’s LTD
+                    </p>
+                </div>
             </section>
         </main>
         <footer style="display:flex; flex-direction: row; background-color: rgba(242, 242, 242, 1);">
