Modified the website

--- a/website.html
+++ b/website.html
@@ -34,26 +34,26 @@
         </header>
         <main>
             <section style="width: 1223.33px; height: 446px; background-image: url(construction.jpg); background-repeat: no-repeat; background-attachment: fixed; background-size: cover; color: white; ">
-                <p>
-                    <p style="font-size: 72px;">
+                <div>
+                    <p style="font-size: 72px; padding-top: 0.5em; margin-left: 20px;">
                         It's Time for <br>
                          a Change
                     </p>
-                    <span style="font-size: 16px;">
+                    <span style="font-size: 16px; margin-left: 20px;">
                         Generate and store your own power. Start saving today <br>
-                     using clean, eco-friendly energy.
+                        using clean, eco-friendly energy.
                     </span> 
-                </p>
-               <p>
-                <button style="width:160px; height:42px; border-radius:10px;">
-                    <a style="color:brown ; text-decoration:none; margin-top:20px" id="link" href="learnhow.html">
-                        Learn How
-                    </a>
-               </p>
-
+                </div>
+               <div>
+                    <button style="width:160px; height:42px; border-radius:10px; margin-left: 20px;">
+                        <a style="color:brown ; text-decoration:none; margin-top:20px; padding: 0.1em;" id="link" href="learnhow.html;">
+                            Learn How
+                        </a>
+                    </button>
+                </div>
             </section>
             <section style="background-color:rgba(18, 34, 46, 1); Width:1223.33px; height:379px; ">
-                <p style="color:white; font-size: 24px;">
+                <p style="color:white; font-size: 24px; padding-top: 3em;">
                     Get a No-Obligation Quote Today!
                 </p>
                 <form action="https://hhtpbin.org/post">
@@ -101,14 +101,15 @@
                 </form>
             </section>
             <section style="width:1233.33px; height:224.32px; background:#F2F2F2; margin-bottom:20px; margin-right: 20px ;">
-                <p style="font-size: 48px;">
+                <p style="font-size: 48px; margin-left: 20px; padding-top: 1em;">
                     Why Should You Switch?
                 </p>
                 <p>
-                    <button style="width:160px; height:42px; border-radius:10px;">
-                        <a style="color:brown ; text-decoration:none; margin-top:20px" id="link" href="learnmore.html">
+                    <button style="width:160px; height:42px; border-radius:10px; margin-left: 20px;">
+                        <a style="color:brown ; text-decoration:none; margin-top:20px; " id="link" href="learnmore.html">
                             Learn More
-                        </a>  
+                        </a> 
+                    </button> 
                 </p>
             </section>
             <section style="display: flex; flex-direction:row;">
@@ -160,7 +161,7 @@
                 </div>
             </section>
             <section style="width:1233.33px; height:170.2px; background-color:#F2F2F2; margin-top: 20px; margin-bottom: 20px;">
-                <p style="font-size:48px; margin-left: 30px;">
+                <p style="font-size:48px; margin-left: 30px; padding-top: 1em;">
                     How Solar Energy Works
                 </p>
 
@@ -180,7 +181,9 @@
                             3.1 <br>
                             Billion
                         </h2>
+                        <p >    
                         KwH of Clean Energy
+                        </p>
                     </p>
                 </div>
                 <div style="width:400px; height:303px; background-color: rgba(207, 221, 233, 1); text-align: center;">
@@ -194,12 +197,12 @@
                 </div>
             </section>
             <section style="width:1233.33px; height:414px; background-image: url(web.jpg); background-size: cover; margin-top: 20px;">
-                <p style="font-size: 16px; margin-left: 50px;">
+                <p style="font-size: 16px; margin-left: 50px; padding-top: 4em;">
                     I'm a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit <br> Text” or double click me to add your own content and make changes to the font. Feel <br>
                     free to drag and drop me anywhere you like on your page. I’m a great place for you to <br>
                     tell a story and let your users know a little more about you.
                 </p>
-                <p style="font-size: 16px; margin-left: 50px;">
+                <p style="font-size: 16px; margin-left: 50px; padding-top: 1em;">
                     This is a great space to write a long text about your company and your services. You <br>
                     can use this space to go into a little more detail about your company. Talk about your <br>
                     team and what services you provide. Tell your visitors the story of how you came up <br>
@@ -209,7 +212,7 @@
             </section>
             <section style="width:1233.3px ;height:219.79px; background-color: rgba(242, 242, 242, 1);margin-bottom:20px">
                 <p>
-                    <h2 style="font-size:48px; margin-left: 30px;">
+                    <h2 style="font-size:48px; margin-left: 30px; padding-top: 1em;">
                         Our Services
                     </h2>
                 </p>
@@ -260,7 +263,7 @@
             </section>
             <section style="width: 1233.33px;height:170.2px; background-color:#F2F2F2; margin-bottom: 20px;">
                 <p>
-                    <h2 style="font-size: 48px; margin-left: 50px;">
+                    <h2 style="font-size: 48px; margin-left: 50px; padding-top: 1em;">
                         See Our Work
                     </h2>
                 </p>
@@ -275,7 +278,7 @@
 
             </section>
             <section style="width:1233.33px; height:200.2px; background-color: #F2F2F2; margin-bottom: 20px;">
-                <p style="font-size:48px; margin-left: 20px;">
+                <p style="font-size:48px; margin-left: 20px; padding-top: 1em;">
                     What Our Happy Clients Say?
                 </p>
             </section>
@@ -344,7 +347,7 @@
                     </a>
                 </p>
                 <p>
-                    <a style="text-align: center; line-height:50px; color:black; text-decoration: none; "href="about.html">
+                    <a style="text-align: center; line-height:50px; color:black; text-decoration:none; "href=about.html>
                         About
                     </a>
                 </p>
@@ -356,7 +359,7 @@
                 <p>
                     &copy;2023 by Go Solar.
                     Powered and secured by
-                     <a style="color:black ;text-decoration:none" href="wix.html"> 
+                     <a style="color:black; text-decoration:none" href="wix.html"> 
                         Wix.com
                     </a>
                 </p>
