--- a/website.html
+++ b/website.html
@@ -6,7 +6,7 @@
         <title>
             Business website
         </title>
-        <link rel="stylesheet" href="websitestyle.css" >
+        <link rel="shortcut icon" href="favicon.jpg" type="image/x-icon">
     </head>
     <body style="margin-left: 20px;">
         <header style="display: flex; flex-direction:row; background-attachment: fixed; position: fixed; overflow: hidden;background-color: aquamarine; top: 0; width: 100%; ">
