--- a/website.html
+++ b/website.html
@@ -2,6 +2,7 @@
 <html lang="en"> 
     <head>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
             Business website
@@ -58,28 +59,28 @@
                 </p>
                 <form action="https://hhtpbin.org/post">
                     <p style="color:white ; margin-left: 10px;">
-                        <label for="Fname">
+                        <label for="Fname1">
                             First Name *
                         </label>
-                        <label style="margin-left:113px ;" for="Lname">
+                        <label style="margin-left:113px ;" for="Lname1">
                             Last Name *
                         </label>
-                        <label style="margin-left:115px ;" for="email">
+                        <label style="margin-left:115px ;" for="email1">
                             Email *
                         </label>
-                        <label style="margin-left: 139px;" for="phone">
+                        <label style="margin-left: 139px;" for="phone1">
                             Phone *
                         </label>
-                        <label style="margin-left:143px;" for="address">
+                        <label style="margin-left:143px;" for="address1">
                             Address *
                         </label>
                     </p>
                     <p style="margin-left: 10px;">
-                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="Fname" id="Fname" required>
-                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="Lname" id="Lname" required>
-                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white"  type="email" name="email" id="email" required>
-                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="tel" name="phone" id="phone" required>
-                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="address" id="address" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="Fname" id="Fname1" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="Lname" id="Lname1" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white"  type="email" name="email" id="email1" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="tel" name="phone" id="phone1" required>
+                        <input style="width:186px; height:44px; border: 2px solid white; background-color:rgba(18, 34, 46, 1); color:white" type="text" name="address" id="address1" required>
                     </p>
                     <div style="display:flex; flex-direction:row">
                         <p style="color:white ;">
@@ -106,7 +107,7 @@
                 </p>
                 <p>
                     <button style="width:160px; height:42px; border-radius:10px; margin-left: 20px;">
-                        <a style="color:brown ; text-decoration:none; margin-top:20px; " id="link" href="learnmore.html">
+                        <a style="color:brown ; text-decoration:none; margin-top:20px; " id="link1" href="learnmore.html">
                             Learn More
                         </a> 
                     </button> 
@@ -114,7 +115,6 @@
             </section>
             <section style="display: flex; flex-direction:row;">
                 <div style="width:400px; height:650px; background-image: url(sky.jpg); background-size: cover; background-attachment: fixed; margin-left: 20px;">
-                    <p >
                         <h2 style="font-size: 24px; margin-left: 50px; ">
                             Sustainable & <br>
                             Renewable Energy
@@ -125,38 +125,33 @@
                             Just click “Edit Text” or double click <br>
                             me to add your own content and <br>
                             make changes to the font.
-                        </p> 
-                    </p>
+                        </p>
                 </div>
                 <div style="width:400px; height:650px; background-color: rgba(180, 92, 61, 1); color: white; margin-left: 20px">
-                    <p>
-                        <h2 style="font-size: 24px; margin-left: 50px; margin-top: 250px;">
-                            Safe & Reliable. <br>
-                            Take Control of Your <br>
-                            Power Production
-                        </h2>
-                        <p style="margin-left: 50px;">
-                            I'm a paragraph. Click here to add <br>
-                            your own text and edit me. It’s easy. <br>
-                            Just click “Edit Text” or double click <br>
-                            me to add your own content and <br>
-                            make changes to the font.
-                        </p>
+                   <h2 style="font-size: 24px; margin-left: 50px; margin-top: 250px;">
+                        Safe & Reliable. <br>
+                        Take Control of Your <br>
+                        Power Production
+                    </h2>
+                    <p style="margin-left: 50px;">
+                        I'm a paragraph. Click here to add <br>
+                        your own text and edit me. It’s easy. <br>
+                        Just click “Edit Text” or double click <br>
+                        me to add your own content and <br>
+                        make changes to the font.
                     </p>
                 </div>
                 <div style="width:400px; height:650px; background-image: url(website.jpg); background-size: cover; margin-left: 20px">
-                    <p>
-                        <h2 style="font-size: 24px;margin-left: 50px;">
-                            Great Savings & <br>
-                             Return on Investment
-                        </h2>
-                        <p style="margin-left: 50px;">
-                            I'm a paragraph. Click here to add <br>
-                            your own text and edit me. It’s easy. <br>
-                            Just click “Edit Text” or double click <br>
-                            me to add your own content and <br>
-                            make changes to the font. 
-                        </p>
+                    <h2 style="font-size: 24px;margin-left: 50px;">
+                        Great Savings & <br>
+                            Return on Investment
+                    </h2>
+                    <p style="margin-left: 50px;">
+                        I'm a paragraph. Click here to add <br>
+                        your own text and edit me. It’s easy. <br>
+                        Just click “Edit Text” or double click <br>
+                        me to add your own content and <br>
+                        make changes to the font. 
                     </p>
                 </div>
             </section>
@@ -168,32 +163,26 @@
             </section>
             <section style="display:flex; flex-direction:row; margin-bottom: 20px;">
                 <div style="width:400px; height:303px; background-color: rgba(207, 221, 233, 1); text-align: center;">
-                    <p>
-                        <h2 style="font-size: 72px;">
-                            200K
-                        </h2>
-                        Happy Customers
-                    </p>
+                    <h2 style="font-size: 72px;">
+                        200K
+                    </h2>
+                    Happy Customers
                 </div>
                 <div style="width:400px; height:303px; background-color: rgba(207, 221, 233, 1); text-align: center; margin-left: 20px; margin-right: 20px;">
-                    <p>
-                        <h2 style="font-size: 72px;">
-                            3.1 <br>
-                            Billion
-                        </h2>
-                        <p >    
-                        KwH of Clean Energy
-                        </p>
+                    <h2 style="font-size: 72px;">
+                        3.1 <br>
+                        Billion
+                    </h2>
+                    <p >    
+                    KwH of Clean Energy
                     </p>
                 </div>
                 <div style="width:400px; height:303px; background-color: rgba(207, 221, 233, 1); text-align: center;">
-                    <p>
-                        <h2 style="font-size: 72px;">
-                            2.4 <br>
-                            Million
-                        </h2>
-                        Metric Tons of Carbon Emissions Avoided
-                    </p>
+                    <h2 style="font-size: 72px;">
+                        2.4 <br>
+                        Million
+                    </h2>
+                    Metric Tons of Carbon Emissions Avoided
                 </div>
             </section>
             <section style="width:1233.33px; height:414px; background-image: url(web.jpg); background-size: cover; margin-top: 20px;">
@@ -211,11 +200,9 @@
                 </p>
             </section>
             <section style="width:1233.3px ;height:219.79px; background-color: rgba(242, 242, 242, 1);margin-bottom:20px">
-                <p>
-                    <h2 style="font-size:48px; margin-left: 30px; padding-top: 1em;">
-                        Our Services
-                    </h2>
-                </p>
+                <h2 style="font-size:48px; margin-left: 30px; padding-top: 1em;">
+                    Our Services
+                </h2>
                 <p style="margin-left: 30px;">
                     We make going solar easy, so you’ll get a better energy service at a better price.
                 </p>
@@ -262,17 +249,15 @@
                 </div>
             </section>
             <section style="width: 1233.33px;height:170.2px; background-color:#F2F2F2; margin-bottom: 20px;">
-                <p>
-                    <h2 style="font-size: 48px; margin-left: 50px; padding-top: 1em;">
-                        See Our Work
-                    </h2>
-                </p>
+                <h2 style="font-size: 48px; margin-left: 50px; padding-top: 1em;">
+                    See Our Work
+                </h2>
             </section>
             <section style="display:flex; margin-bottom: 20px;">
-                <div style="width:398px; height:517.84px; background-image: url(Add.jpg); background-size: cover;  margin-right: 20px;">
+                <div style="width:398px; height:517.84px; background-image: url(Add.jpg); background-size: cover;  margin-right: 20px; background-attachment: fixed;">
 
                 </div>
-                <div style="width:829px; height:517.84px;  background-image: url(Geo.jpg); background-size: cover; background-position: 50%;">
+                <div style="width:829px; height:517.84px;  background-image: url(Geo.jpg); background-size: cover; background-position: 50%; background-attachment: fixed;">
 
                 </div>
 
@@ -347,7 +332,7 @@
                     </a>
                 </p>
                 <p>
-                    <a style="text-align: center; line-height:50px; color:black; text-decoration:none; "href=about.html>
+                    <a style="text-align: center; line-height:50px; color:black; text-decoration:none; " href=about.html>
                         About
                     </a>
                 </p>
@@ -382,7 +367,7 @@
                     </p>
                     <p>
                         <input style="width: 216px;height:44px" type="text" name="Fname" id="Fname" required>
-                        <input style="width:288px;height:44px;" type="text" name="Fname" id="Fname" required>
+                        <input style="width:288px;height:44px;" type="text" name="Fname" id="Lname" required>
                     </p>
                     <p>
                         <label for="tel">
